--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
 <script>
@@ -12,12 +12,7 @@ if (window.openDatabase) {
     var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
     //create the clubs table using SQL for the database using a transaction MUST BE IN A TRANSACTION
     mydb.transaction(function(t) {
-        t.executeSql("CREATE TABLE IF NOT EXISTS clubsdata (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, events TEXT, fundraisers TEXT, category INTEGER, image TEXT)"); //creates table 
-		//first column is "email": this is an integer, a PK and is in asc order
-		//second column is "firstname": of type "text"
-		//third column is "lastname": of type "text"
-		//fourth column is "clubname": of type "text"
-		//fifth column is "purpose": of type "text"
+        t.executeSql("CREATE TABLE IF NOT EXISTS users (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, password TEXT)"); //creates table 
     });
 } else {
     alert("WebSQL is not supported by your browser!"); //will run this is webSQL is not supported by browser
@@ -30,17 +25,12 @@ function addClub() {
         var firstname = document.getElementById("fname").value; //box itself is id = fname value is whats inside of the box
 		var lastname = document.getElementById("lname").value; //same as before, box itself is id value is whats typed
 		var email = document.getElementById("email").value; // email input
-		var clubname = document.getElementById("cname").value; // club name value input
-		var purpose = document.getElementById("purpose").value; 
-		var category = document.getElementById("category").value; //gets value of the category
-		var events = document.getElementById("events").value; // club name value input
-		var fundraisers = document.getElementById("fundraisers").value; 
-		var image = document.getElementById("image").value; //gets value of the category
+		var password = document.getElementById("password").value; // password input
         //Test to ensure that the user has entered all fields
-        if (firstname !== "" && lastname !== "" && email !=="" && clubname !== "" && purpose !== "") {
+        if (firstname !== "" && lastname !== "" && email !=="" && password !== "") {
             //Insert the user entered details into the clubs table, note the use of the ? placeholder, these will replaced by the data passed in as an array as the second parameter
             mydb.transaction(function(t) {
-				t.executeSql("INSERT INTO clubsdata (email, firstname, lastname, clubname, purpose, events, fundraisers, category, image) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)", [email, firstname, lastname, clubname, purpose, events, fundraisers, category, image]); 
+				t.executeSql("INSERT INTO clubsdata (email, firstname, lastname, password) VALUES (?, ?, ?, ?)", [email, firstname, lastname, password]); 
 				//window.open("http://www.w3schools.com");
             });
         } else {
@@ -51,67 +41,35 @@ function addClub() {
     }
 }
 </script>
+<link rel="stylesheet" type="text/css" href="myStyles.css">
 
-<title>Create a Club</title>
 </head>
-<style>
-body {
-    background-color: #ff8f7e;
-    display: inline-block;
-}
-</style>
 <body>
-<form action="/" method="get">
-    <label>
-        <h3>First Name</h3>
-    </label>
-    <input type="text"  id = "fname"  required autocomplete="off" required />
-    <label>
-        <h3>Last Name</h3>
-    </label>    
-    <input type="text" id = "lname" required autocomplete="off" required />
-    <label>
-        <h3>Email</h3>
-    </label>    
-    <input type="text" id = "email" required autocomplete="off" required />
-    <label>
-        <h3>Club Name</h3>
-    </label>    
-    <input type="text" id = "cname" required autocomplete="off" required />
-    <label>
-        <h3>Club Purpose</h3>
-    </label>    
-    <input type="text" height="500" id = "purpose" required autocomplete="off" required />
-    <label>
-    	<h3>Events</h3>
-    </label>    
-    <input type="text" height="500" id = "events" required autocomplete="off" required />
-    <label>
-        <h3>Fundraisers</h3>
-    </label>    
-    <input type="text" height="500" id = "fundraisers" required autocomplete="off" required />
-    <label>
-        <h3>Club Category</h3>
-    </label>
-    <select id="category">
-  <option value=1>Service Club</option>
-  <option value=2>Honor Society</option>
-  <option value=3>Student Government</option>
-  <option value=4>Academic</option>
-   <option value=5>Hobby</option>
-   <option value=6>Social Awareness</option>
-  <option value=7>Other</option>
-</select>
-
-    <br>
-    <br>
-     <label>
-        <h3>Image</h3>
-    </label>
-    <input type="file" id="image" name="pic" multiple accept="image/gif, image/jpeg" />
-    <br>
-    <br>
-    <input type="button" id = "addclub" onclick = "addClub()" value="Submit"> 
-</form>
+<div class="form">
+    <div class="tab-content">
+        <div id="signup">   
+            <h1>Sign Up for Free</h1>          
+            <form action="/" method="post">       
+            <div class="top-row">
+                <div class="field-wrap">
+                    <input type="text" required autocomplete="off" placeholder="First Name" required />
+                </div>
+                <div class="field-wrap">
+                    <input type="text"required autocomplete="off" placeholder="Last Name" required/>
+                </div>
+            </div>
+            <div class="field-wrap">
+                <input type="email"required autocomplete="off" placeholder="Email Address" required/>
+            </div>
+            <div class="field-wrap">
+                <input type="password"required autocomplete="off" placeholder="Password" required/>
+            </div>
+            <br>
+            <button type="submit" class="button button-block"/>Get Started</button>
+            Already have an account? <a href="CoverPage.html">Log in.</a></li>
+            </form>
+        </div>
+    </div><!-- tab-content -->
+</div> <!-- /form -->
 </body>
 </html>
