--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function addUser() {
                 <input type="password"required autocomplete="off" placeholder="Password" required/>
             </div>
             <br>
-            <button type="submit" onclick="addUser()" class="button button-block"/>Get Started</button>
+            <button type="button" onclick="addUser()" class="button button-block"/>Get Started</button>
             Already have an account? <a href="CoverPage.html">Log in.</a></li>
             </form>
         </div>
