--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ function addUser() {
                 <input type="password"required autocomplete="off" id="password" placeholder="Password" required/>
             </div>
             <br>
-            <button type="button" onclick="addUser()" class="button button-block"/>Get Started</button>
+            <input type="button" id = "adduser" class="button button-block" onclick = "addUser()" value="Get Started">
+            
             Already have an account? <a href="CoverPage.html">Log in.</a></li>
             </form>
         </div>
