--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ a:hover.clubcreatebutton, a:active.clubcreatebutton {
     <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img src="ribbon.png" class="rotate90"></span>
     
 <!--SIDE BAR DONE-->
-<center><a class="clubcreatebutton" href="CreateAClubForm.html">Create a club</a></center>
+<center><a class="clubcreatebutton" href="clubdatafinal.html">Create a club</a></center>
 <div class="unhidden" id="homee">
 <h2 id="test"> FEATURES</h2>
 <div id="test2">
