--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 <link rel="icon" href="clubt.png">
 <link rel="stylesheet" href="home_style.css">
 <link rel="stylesheet" href="userdrop.css">
-<script src="website.js"></script>
+<script src="website.js">
+if (window.openDatabase) {
+
+    var mydb = openDatabase("clubs_db", "0.1", "Database of Clubs Registered", 1024 * 1024);
+   
+    mydb.transaction(function(t) {
+        t.executeSql("CREATE TABLE IF NOT EXISTS clubsdata (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, clubname TEXT, purpose TEXT, events TEXT, fundraisers TEXT, category INTEGER, image TEXT)"); //creates table 
+	t.executeSql("CREATE TABLE IF NOT EXISTS users (email TEXT PRIMARY KEY, firstname TEXT, lastname TEXT, password TEXT)"); //creates table 
+
+    });
+} else {
+    alert("WebSQL is not supported by your browser!"); 
+}
+</script>
 <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
     <!--<link href='style.css' rel='stylesheet'>-->
