--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@ a:hover.clubcreatebutton, a:active.clubcreatebutton {
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
   <button type="button" onclick="goHome()">Home</button><br>
-  <button type="button" onclick="Academics()">Academic</button><br>
+  <button type="button" onclick="Service()">Service Club</button><br>
   <button type="button" onclick="Honor()">Honor Societies</button><br>
-  <button type="button" onclick="Service()">Service</button><br>
-  <button type="button" onclick="Social()">Social Awareness</button><br>
   <button type="button" onclick="SGA()">Student Government</button><br>
-  <button type="button" onclick="Other()">Other</button><br>
+  <button type="button" onclick="Academic()">Academic</button><br>
+  <button type="button" onclick="Hobby()">Hobby</button><br>
+  <button type="button" onclick="Social()">Social Awareness</button><br>
+  <button type="button" onclick="Other()">Social Awareness</button><br>
 </div>
 
 <div id="main">
