--- a/clubdatafinal.html
+++ b/clubdatafinal.html
@@ -111,7 +111,7 @@ body {
     <input type="file" id="image" name="pic" multiple accept="image/gif, image/jpeg" />
     <br>
     <br>
-    <input type="button" id = "addclub" onclick = "addClub()" onclick = "locatin.href'index.html';" value="Submit"> 
+    <input type="button" id = "addclub" onclick = "addClub()" onclick = "location.href'index.html';" value="Submit"> 
 </form>
 </body>
 </html>
