--- a/clubdatafinal.html
+++ b/clubdatafinal.html
@@ -49,6 +49,8 @@ function addClub() {
     } else {
         alert("db not found, your browser does not support web sql!");
     }
+    }
+window.location='index.html'
 }
 </script>
 
@@ -111,7 +113,7 @@ body {
     <input type="file" id="image" name="pic" multiple accept="image/gif, image/jpeg" />
     <br>
     <br>
-    <input type="button" id = "addclub" onclick = "addClub()" onclick = "location.href'index.html';" value="Submit"> 
+    <input type="button" id = "addclub" onclick = "addClub()" value="Submit"> 
 </form>
 </body>
 </html>
