--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ a:hover.clubcreatebutton, a:active.clubcreatebutton {
   <button type="button" onclick="Academic()">Academic</button><br>
   <button type="button" onclick="Hobby()">Hobby</button><br>
   <button type="button" onclick="Social()">Social Awareness</button><br>
-  <button type="button" onclick="Other()">Social Awareness</button><br>
+  <button type="button" onclick="Other()">Other Clubs</button><br>
 </div>
 
 <div id="main">
