--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@ a:hover.clubcreatebutton, a:active.clubcreatebutton {
 </style>-->
 
 <div class="hidden" id="thumbnail">
-<div class="row" id="pop">
-  <div class="col-sm-6 col-md-4" id="pop">
-    <div class="thumbnail" id="pop">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
       <img src="" alt="" id="imgg">
-      <div class="caption"id="pop">
+      <div class="caption">
         <h3 id="pop">Math Club</h3>
-        <p id="pop">...</p>
+        <p>...</p>
         <p><a href="#" id="pop "class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
       </div>
     </div>
