--- a/index.html
+++ b/index.html
@@ -196,11 +196,9 @@ a:hover.clubcreatebutton, a:active.clubcreatebutton {
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="" alt="" id="imgg">
+      <img src="" id="imgg">
       <div class="caption">
-        <h3 id="pop">Math Club</h3>
-        <p>...</p>
-        <p><a href="#" id="pop "class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <h3 id="pop"> </h3>
       </div>
     </div>
   </div>
