--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ a:hover.clubcreatebutton, a:active.clubcreatebutton {
     <div class="thumbnail">
       <img src="" id="imgg">
       <div class="caption">
-        <h3 id="pop"> </h3>
+        <h3 id="pop" class="thumbstyle"> </h3>
       </div>
     </div>
   </div>
